# sidereal_v3

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  SESSION_SUMMARY.md  docker-compose.yaml
.github/: pull_request_template.md
bins/sidereal-bg-sim/: Cargo.toml
bins/sidereal-bg-sim/src/: main.rs
bins/sidereal-client/: Cargo.toml
bins/sidereal-client/src/: auth_ui.rs  dialog_ui.rs  main.rs  prediction.rs
bins/sidereal-gateway/: Cargo.toml
bins/sidereal-gateway/src/: api.rs  auth.rs  main.rs
bins/sidereal-gateway/tests/: auth_flow.rs
bins/sidereal-orchestrator/: Cargo.toml
bins/sidereal-orchestrator/src/: main.rs
bins/sidereal-replication/: Cargo.toml
bins/sidereal-replication/src/: bootstrap.rs  main.rs  state.rs  visibility.rs
bins/sidereal-replication/tests/: lifecycle.rs  transport_lightyear_e2e.rs
bins/sidereal-shard/: Cargo.toml  README.md
bins/sidereal-shard/src/: main.rs
bins/sidereal-shard/tests/: lifecycle.rs
bins/sidereal-tools/: Cargo.toml
bins/sidereal-tools/src/: main.rs
crates/sidereal-core/: Cargo.toml
crates/sidereal-core/src/: lib.rs  remote_inspect.rs
crates/sidereal-core/tests/: id_helpers.rs  remote_inspect_config.rs
crates/sidereal-game/: Cargo.toml
crates/sidereal-game/schema/components/: README.md  core_components.yaml
crates/sidereal-game/src/: actions.rs  corvette.rs  flight.rs  lib.rs  mass.rs
crates/sidereal-game/tests/: component_registry.rs
crates/sidereal-input-map/: Cargo.toml
crates/sidereal-input-map/src/: lib.rs
crates/sidereal-net/: Cargo.toml
crates/sidereal-net/src/: lib.rs  lightyear_protocol.rs
crates/sidereal-net/tests/: envelope_codec.rs  lightyear_protocol.rs
crates/sidereal-persistence/: Cargo.toml
crates/sidereal-persistence/src/: lib.rs
crates/sidereal-persistence/tests/: lifecycle.rs
crates/sidereal-sim-core/: Cargo.toml
crates/sidereal-sim-core/src/: lib.rs
crates/sidereal-sim-core/tests/: deterministic_vectors.rs
data/cache_stream/shaders/: starfield.wgsl
data/models/corvette_01/: corvette_01.gltf
data/models/corvette_02/: corvette_02.gltf
data/models/corvette_03/: corvette_03.gltf
data/models/corvette_04/: corvette_04.gltf
data/models/corvette_05/: corvette_05.gltf
data/models/frigate_01/: frigate_01.gltf
data/models/frigate_02/: frigate_02.gltf
data/models/frigate_03/: frigate_03.gltf
data/models/frigate_04/: frigate_04.gltf
data/models/frigate_05/: frigate_05.gltf
data/shaders/: INDEX.md  PARAMETER_CHEATSHEET.md  QUICK_REFERENCE.md  README_ASTEROID.md  README_PLANETS.md  README_SPACE_BACKGROUND.md  asteroid.wgsl  planet_atmosphere.wgsl  planet_core.wgsl  planet_normal.wgsl  planetary_rings.wgsl  simple_space_background.wgsl  space_background.wgsl  stellar_corona.wgsl
docker/init/: 001-age-init.sql
docs/: bevy_features.md  quickstart_first_solar_system.md  sidereal_design_document.md  sidereal_implementation_checklist.md  ui_design_guide.md  universe_building_plan.md
tests/: README.md
