[package]
name = "sidereal-client"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
avian3d.workspace = true
bevy = { workspace = true, features = ["webgpu"] }
sidereal-core = { path = "../../crates/sidereal-core" }
sidereal-sim-core = { path = "../../crates/sidereal-sim-core" }
serde.workspace = true
serde_json.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy_remote = "0.18.0"
lightyear.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rand.workspace = true
sidereal-net = { path = "../../crates/sidereal-net", features = ["lightyear_protocol"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy_remote = { version = "0.18.0", default-features = false, features = ["bevy_asset"] }
