[package]
name = "sidereal-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
argon2.workspace = true
async-trait.workspace = true
axum = { workspace = true, features = ["macros"] }
base64.workspace = true
jsonwebtoken.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sidereal-core = { path = "../../crates/sidereal-core" }
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "macros", "net", "rt-multi-thread"] }
tokio-postgres.workspace = true
tokio-util = { version = "0.7", features = ["io"] }
uuid.workspace = true
sidereal-persistence = { path = "../../crates/sidereal-persistence" }

[dev-dependencies]
serde_json.workspace = true
tower = { version = "0.5", features = ["util"] }
sidereal-replication = { path = "../sidereal-replication" }
