[package]
name = "sidereal-shard"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
avian3d.workspace = true
bevy.workspace = true
bevy_remote.workspace = true
lightyear.workspace = true
sidereal-core = { path = "../../crates/sidereal-core" }
sidereal-game = { path = "../../crates/sidereal-game" }
sidereal-sim-core = { path = "../../crates/sidereal-sim-core" }
sidereal-net = { path = "../../crates/sidereal-net", features = ["lightyear_protocol"] }
serde_json.workspace = true

[dev-dependencies]
avian3d.workspace = true
sidereal-persistence = { path = "../../crates/sidereal-persistence" }
uuid.workspace = true
