[package]
name = "sidereal-game"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
avian3d.workspace = true
bevy.workspace = true
serde.workspace = true
sidereal-core = { path = "../sidereal-core" }
sidereal-sim-core = { path = "../sidereal-sim-core" }
uuid.workspace = true
