[package]
name = "sidereal-persistence"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
postgres.workspace = true
serde.workspace = true
serde_json.workspace = true
sidereal-core = { path = "../sidereal-core" }
sidereal-net = { path = "../sidereal-net" }
thiserror.workspace = true

[dev-dependencies]
uuid.workspace = true
